compiler/plc_parser/src/parser/tests/parse_errors/snapshots/plc_parser__parser__tests__parse_errors__parse_error_statements_tests__nested_repeat_with_missing_end_repeat.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token [KeywordEndRepeat]
  ┌─ <internal>:8:12
  │
8 │            END_PROGRAM
  │            ^^^^^^^^^^^ Missing expected Token [KeywordEndRepeat]

error[E007]: Unexpected token: expected KeywordEndRepeat but found 'END_PROGRAM'
  ┌─ <internal>:8:12
  │
8 │            END_PROGRAM
  │            ^^^^^^^^^^^ Unexpected token: expected KeywordEndRepeat but found 'END_PROGRAM'
